UV unwrap: Pinning is broken #59668

Closed
opened 2018-12-20 11:53:46 +01:00 by Kyron de Haas · 9 comments

System Information
Operating system: Windows 10 64bits
Graphics card: Geforce 1070

Blender Version
Broken:
2.80, 7d8f57e0c0

Description
Pinning vertices on any mesh in the UV editor is not functioning. Unwrapping after pinning leads to vertices displacing and deforming.

Exact steps for others to reproduce the error
Unwrap the default cube and pin any number of vertices and unwrap again.

**System Information** Operating system: Windows 10 64bits Graphics card: Geforce 1070 **Blender Version** Broken: 2.80, 7d8f57e0c013 **Description** Pinning vertices on any mesh in the UV editor is not functioning. Unwrapping after pinning leads to vertices displacing and deforming. **Exact steps for others to reproduce the error** Unwrap the default cube and pin any number of vertices and unwrap again.
Author

Added subscriber: @KyrondeHaas

Added subscriber: @KyrondeHaas
Brecht Van Lommel self-assigned this 2018-12-20 15:32:56 +01:00

This issue was referenced by e56aa4ff0c

This issue was referenced by e56aa4ff0c6b2a1746d5c39e297c9f6f56c4b492

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @JCo

Added subscriber: @JCo

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

System Information
Operating system: Windows 10 64bits
Graphics card: Geforce GTX 1080

Blender Version
Broken:
2.80, Release Candidate 1 & 2

Description
Pinning vertices on any mesh in the UV editor is not functioning. Unwrapping after pinning leads to vertices displacing and deforming.

Exact steps for others to reproduce the error

I'm seeing it somewhat intermittently but it's definitely reproducible. Seems to depend on the mesh itself. I'd encourage trying on more than just the default cube. Including my .blend file where I see it every time on the currently selected mesh.ArchKitv2.blend

**System Information** Operating system: Windows 10 64bits Graphics card: Geforce GTX 1080 **Blender Version** Broken: 2.80, Release Candidate 1 & 2 **Description** Pinning vertices on any mesh in the UV editor is not functioning. Unwrapping after pinning leads to vertices displacing and deforming. **Exact steps for others to reproduce the error** I'm seeing it somewhat intermittently but it's definitely reproducible. Seems to depend on the mesh itself. I'd encourage trying on more than just the default cube. Including my .blend file where I see it every time on the currently selected mesh.[ArchKitv2.blend](https://archive.blender.org/developer/F7627317/ArchKitv2.blend)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Please don't reopen old tasks, create a new bug report, after 6 months it's unlikely to be the same issue.

Please don't reopen old tasks, create a new bug report, after 6 months it's unlikely to be the same issue.

Sorry for the confusion.

Sorry for the confusion.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59668
No description provided.