Fix T59668: UV unwrap pinning bugs.

With multi object editing it creates the charts twice, which broke some
logic in the unwrapper.